[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configTemplate"
version = "0.0.9"
authors = [
  { name="Mitch Kerle", email="mitch.kerle@gmail.com" },
]
description = "Configuration Templating Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mkerle/config-template"
"Bug Tracker" = "https://github.com/mkerle/config-template/issues"